test/classes/delete-free/bad-retain-error.2.good
bad-retain-error.chpl:13: In function 'main':
bad-retain-error.chpl:19: error: cannot assign to 'owned A' from 'owned B'
